Post-v3.5.0
--------------------
   - DPDK:
     * New debug appctl command 'dpdk/get-memzone-stats'.
   - ovs-ctl:
     * Added a new option, --oom-score=<score>, to set the daemons' Linux
       Out-Of-Memory (OOM) killer score.
   - Tunnels:
     * Support for previously deprecated LISP and STT tunnel port types
       is now removed.


v3.5.0 - 17 Feb 2025
--------------------
   - The limit on the number of fields for address prefix tracking in flow
     tables increased from 3 to 4.  For example, it is now possible to
     specify both IPv4 and IPv6 address fields at the same time:
      $ ovs-vsctl set Bridge br0 flow_tables:123=@N -- \
          --id=@N create Flow_Table \
                    name=table123 prefixes=nw_dst,nw_src,ipv6_dst,ipv6_src
   - Address prefix tracking is now enabled by default for both IPv4 and IPv6
     address fields: nw_dst, nw_src, ipv6_dst and ipv6_src.
     This allows to significantly reduce amount of datapath flows generated
     from mixed IPv4+IPv6 flow tables.
   - SSL/TLS:
     * TLSv1 and TLSv1.1 protocols are deprecated and disabled by default
       on OpenFlow and database connections.  Use --ssl-protocols to turn
       them back on.  Support will be fully removed in the next release.
     * OpenSSL 1.1.1 or newer is now required for SSL/TLS support.
     * The protocol list in --ssl-protocols or corresponding database column
       now supports specifying simple protocol ranges like:
         - "TLSv1-TLSv1.2" to enable all protocols between TLSv1 and TLSv1.2.
         - "TLSv1.2+" to enable protocol TLSv1.2 and later.
       The value must be a list of protocols or exactly one protocol range.
     * Added explicit support for TLSv1.3.  It can now be enabled via
       --ssl-protocols (TLSv1.3 was supported in earlier versions only when
       this option was not set).  TLS ciphersuites for TLSv1.3 and later can
       be configured via --ssl-ciphersuites (--ssl-ciphers only applies to
       TLSv1.2 and earlier).